correct z-index of tipsy tooltip

--- a/css/tipsy.css
+++ b/css/tipsy.css
@@ -1,4 +1,4 @@
-.tipsy { font-size: 13px; position: absolute; padding: 5px; z-index: 50000; }
+.tipsy { font-size: 13px; position: absolute; padding: 5px; z-index: 5000; }
   .tipsy-inner { background-color: #FF0000; color: #FFF; max-width: 200px; padding: 5px 8px 4px 8px; text-align: center; }
 
   /* Rounded corners */
